--- a/threatDB/default/transforms.conf
+++ b/threatDB/default/transforms.conf
@@ -1,3 +1,3 @@
 [lookupthreat]
 external_cmd = redisworker.py clientip threatscore
-fields_list = clientip threatsource threatcategory threatscore
+fields_list = clientip,threatsource,threatcategory,threatscore
